build/log/idf_py_stderr_output_18037
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c:31:1: error: type qualifiers ignored on function return type [-Werror=ignored-qualifiers]
   31 | const void uart_rcv(){
      | ^~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:38:17: error: 'rx_incoming' undeclared (first use in this function)
   38 |                 rx_incoming = uart_read_bytes(uart_num, rx_data, maxBytes, 500);
      |                 ^~~~~~~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:38:17: note: each undeclared identifier is reported only once for each function it appears in
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'app_main':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:49:9: error: implicit declaration of function 'uart' [-Wimplicit-function-declaration]
   49 |         uart(rcv);
      |         ^~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:49:14: error: 'rcv' undeclared (first use in this function)
   49 |         uart(rcv);
      |              ^~~
cc1: all warnings being treated as errors
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
